# MIP

./: CMakeLists.txt  Readme.txt  controlador.py  serial_port.py
BOUML_Proyect/: 128002.diagram  141186.diagram  141314.diagram
CLIENT.cpp/build_gui/: gui.py
CLIENT.cpp/lib/: cl_GUI.cpp  panel_cliente.cpp  panel_cliente.h
CLIENT.cpp/scripts/: XmlRpcDispatch.cpp  XmlRpcSocket.cpp  cl_UI.h
SERVER.py/: orden.py  rpc.py  rpc_en_cli.py  serial_port.py
SERVER.py/log/: log.txt
SERVER.py/trayectorias/: Tray_01.txt
client20.cpp/: CMakeLists.txt  cl_UI.cpp  cl_UI.h  client_original.cpp  cliente.cpp  cliente.h  cliente_main.cpp  hola_server.cpp  panel_cliente.cpp  panel_cliente.h  xml_rpc_test_01.zpr
client20.cpp/lib/: base64.h  cl_GUI.h  cliente_main_gui.cpp
client20.cpp/libreria/: cl_UI.cpp  cl_UI.h  cliente_main.cpp  hola_client.cpp  panel_cliente.cpp
client20.cpp/scripts/: cliente_main.cpp
robotArm_v0.63/: command.cpp
server20.py/: controlador.py  dataLogger.py  excepciones.py  main_test.py  report.py  rpc.py  rpc_en_cli.py  serial_port.py
server20.py/log/: log.txt
server20.py/trayectorias/: tray000.txt  tray_001.txt  tray_02.txt
server_proyect_bouml/: 128002  128002.diagram  134530  134530.diagram  2.session  server_proyect_bouml.prj
servidor/: controlador.py  serial_port.py
xml_rpc_prueba_cliente_cpp/: client_original.cpp  hola_server.cpp  xml_rpc_test_01.zpr
xml_rpc_prueba_cliente_cpp/libreria/: README.txt  XmlRpcDispatch.cpp  XmlRpcSocket.cpp  XmlRpcValue.cpp  hola_client.cpp
xml_rpc_prueba_servidor_py/xmlrpc - copia/: controlador.py  eje2_cliente_http.py  execpciones.py  main_test.py  rpc.py  rpc_en_cli.py  serial_port.py
